--- a/page4.html
+++ b/page4.html
@@ -13,9 +13,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTG986K"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<h1>Page 1</h1>
-<p>Tonight I dreamt of a beautiful walk on a sandy beach.</p>
-<p>At least that explains the footprints I found in the cat litter box this morning.</p>
+<h1>Page 4</h1>
+<p>What do you call a Ottawa Redblacks fan with an IQ of 10?</p>
+<p>Supremely gifted!</p>
 
 </body>
 </html>
