--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li><a href="page4.html">Page 4</a></li>
 <li><a href="page5.html">Page 5</a></li>
 </p>
-<p><i class="fa fa-star-o" aria-hidden="true">Show</i></p>
+<p><i class="fa fa-star-o" style="color:orange" aria-hidden="true">HotSpot</i></p>
+<p><i class="fa fa-star-o" style="color:purple" aria-hidden="true">OpenJ9</i></p>
 </body>
 </html>
