--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NTG986K');</script>
-<!-- End Google Tag Manager -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105616558-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-105616558-2');
+</script>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NTG986K"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
 <h1>Test GA data with IP collection.</h1>
 <p>Site pages:
 <ul>
@@ -23,7 +23,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li><a href="page4.html">Page 4</a></li>
 <li><a href="page5.html">Page 5</a></li>
 </p>
-<p><i class="fa fa-star-o" style="color:orange" aria-hidden="true">H</i> Hotspot</p>
-<p><i class="fa fa-star-o" style="color:purple" aria-hidden="true">O</i> OpenJ9</p>
+<p><i class="fa fa-star-o" style="color:orange" aria-hidden="true">H</i><span class="sr-only">Hotspot VM</span> Hotspot</p>
+<p><i class="fa fa-star-o" style="color:purple" aria-hidden="true">O</i><span class="sr-only">OpenJ9 VM</span> OpenJ9</p>
 </body>
 </html>
