--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105616558-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-105616558-2');
+</script>
+
 </head>
 <body>
 <h1>Page 2</h1>
